# pushswap

./: .rand.c  ARG  CMakeLists.txt  Makefile  SAVED SHIT  THEREISSOMETHINGWRONG  a.out  arr_qsort.c  assign_pos.c  author  calculate_count.c  checker  checker.c  copy  count_ops.c  file  find_edge.c  ft_del_node.c  ft_lstadd_at_head.c  ft_lstadd_at_tail.c  ft_memcpy.c  ft_newnode.c  ft_node_new.c  ft_strtoll.c  get_count.c  get_data_at.c  get_flag.c  get_neighb_by_pos.c  get_node.c  get_pos_by_sortpos.c  get_rev.c  get_rot.c  init_list.c  initial_processing.c  keep_in_stack_a.c  launch.json  max_int_in_array.c  min_sort.c  new_sort.c  parse.c  (+27 more)
Libftprintf/: makefile
Libftprintf/libft/: Makefile  ft_abs.c  ft_arr2alloc.c  ft_arr2free.c  ft_atoi.c  ft_bzero.c  ft_count_lines.c  ft_countwords.c  ft_free2dmass.c  ft_hex_to_dec.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd.c  ft_lstdel.c  ft_lstdel_begin.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlen.c  ft_lstmap.c  ft_lstnew.c  ft_max.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_min.c  ft_pow.c  ft_pushback.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  (+40 more)
Libftprintf/libft/a.out.dSYM/Contents/Resources/DWARF/: a.out
Libftprintf/source/: arr_zero.c  bignum_create.c  bignum_create_by_str.c  bignum_destroy.c  bin_div.c  bin_mult.c  bin_sum.c  bin_to_dec.c  c_handler.c  cast.c  cust_str_ops.c  d_handler.c  dec_div.c  dec_mult.c  dec_sum.c  f_handler.c  fetch.c  find_exclusion.c  find_flags.c  fs_copy.c  fs_destroy.c  fs_init.c  fs_vector_create.c  fs_vector_destroy.c  fs_vector_length.c  fs_vector_push_back.c  fs_vector_resize.c  ft_abs.c  ft_bzero.c  ft_count_digits.c  ft_dec_to_hex.c  ft_dec_to_oct.c  ft_isalnum.c  ft_isalpha.c  ft_isdigit.c  ft_ltoa.c  ft_max.c  ft_pow.c  ft_printf.c  ft_printf.h  (+69 more)
a.out.dSYM/Contents/Resources/DWARF/: a.out
checker.dSYM/Contents/Resources/DWARF/: checker
push_swap.dSYM/Contents/Resources/DWARF/: push_swap
rand.dSYM/Contents/Resources/DWARF/: rand
