cmake_minimum_required(VERSION 3.14)
project(push_swap C)

set(CMAKE_C_STANDARD 11)

include_directories(.)
include_directories(Libftprintf/libft)
include_directories(Libftprintf/source)

add_executable(push_swap
        Libftprintf/libft/ft_arr2alloc.c
        Libftprintf/libft/ft_arr2free.c
        Libftprintf/libft/ft_atoi.c
        Libftprintf/libft/ft_count_lines.c
        Libftprintf/libft/ft_countwords.c
        Libftprintf/libft/ft_free2dmass.c
        Libftprintf/libft/ft_hex_to_dec.c
        Libftprintf/libft/ft_isascii.c
        Libftprintf/libft/ft_isprint.c
        Libftprintf/libft/ft_itoa.c
        Libftprintf/libft/ft_lstadd.c
        Libftprintf/libft/ft_lstdel.c
        Libftprintf/libft/ft_lstdel_begin.c
        Libftprintf/libft/ft_lstdelone.c
        Libftprintf/libft/ft_lstiter.c
        Libftprintf/libft/ft_lstlen.c
        Libftprintf/libft/ft_lstmap.c
        Libftprintf/libft/gnl_with_eol.c
        Libftprintf/libft/ft_lstnew.c
        Libftprintf/libft/ft_memalloc.c
        Libftprintf/libft/ft_memccpy.c
        Libftprintf/libft/ft_memchr.c
        Libftprintf/libft/ft_memcmp.c
        Libftprintf/libft/ft_memdel.c
        Libftprintf/libft/ft_memmove.c
        Libftprintf/libft/ft_memset.c
        Libftprintf/libft/ft_min.c
        Libftprintf/libft/ft_pushback.c
        Libftprintf/libft/ft_putchar.c
        Libftprintf/libft/ft_putchar_fd.c
        Libftprintf/libft/ft_putendl.c
        Libftprintf/libft/ft_putendl_fd.c
        Libftprintf/libft/ft_putnbr.c
        Libftprintf/libft/ft_putnbr_fd.c
        Libftprintf/libft/ft_putstr.c
        Libftprintf/libft/ft_putstr_fd.c
        Libftprintf/libft/ft_strclr.c
        Libftprintf/libft/ft_strcpy.c
        Libftprintf/libft/ft_strequ.c
        Libftprintf/libft/ft_striter.c
        Libftprintf/libft/ft_striteri.c
        Libftprintf/libft/ft_strlcat.c
        Libftprintf/libft/ft_strmap.c
        Libftprintf/libft/ft_strmapi.c
        Libftprintf/libft/ft_strncat.c
        Libftprintf/libft/ft_strncpy.c
        Libftprintf/libft/ft_strndup.c
        Libftprintf/libft/ft_strnequ.c
        Libftprintf/libft/ft_strnstr.c
        Libftprintf/libft/ft_strrchr.c
        Libftprintf/libft/ft_strsplit.c
        Libftprintf/libft/ft_strstr.c
        Libftprintf/libft/ft_strtrim.c
        Libftprintf/libft/ft_tolower.c
        Libftprintf/libft/ft_toupper.c
        Libftprintf/libft/ft_vec_at.c
        Libftprintf/libft/ft_vec_create.c
        Libftprintf/libft/ft_vec_push_back.c
        Libftprintf/libft/ft_vec_resize.c
        Libftprintf/libft/get_next_line.c
        Libftprintf/libft/libft.h
        Libftprintf/source/arr_zero.c
        Libftprintf/source/bignum_create.c
        Libftprintf/source/bignum_create_by_str.c
        Libftprintf/source/bignum_destroy.c
        Libftprintf/source/bin_div.c
        Libftprintf/source/bin_mult.c
        Libftprintf/source/bin_sum.c
        Libftprintf/source/bin_to_dec.c
        Libftprintf/source/c_handler.c
        Libftprintf/source/cast.c
        Libftprintf/source/cust_str_ops.c
        Libftprintf/source/d_handler.c
        Libftprintf/source/dec_div.c
        Libftprintf/source/dec_mult.c
        Libftprintf/source/dec_sum.c
        Libftprintf/source/f_handler.c
        Libftprintf/source/fetch.c
        Libftprintf/source/find_exclusion.c
        Libftprintf/source/find_flags.c
        Libftprintf/source/fs_copy.c
        Libftprintf/source/fs_destroy.c
        Libftprintf/source/fs_init.c
        Libftprintf/source/fs_vector_create.c
        Libftprintf/source/fs_vector_destroy.c
        Libftprintf/source/fs_vector_length.c
        Libftprintf/source/fs_vector_push_back.c
        Libftprintf/source/fs_vector_resize.c
        Libftprintf/source/ft_abs.c
        Libftprintf/source/ft_bzero.c
        Libftprintf/source/ft_count_digits.c
        Libftprintf/source/ft_dec_to_hex.c
        Libftprintf/source/ft_dec_to_oct.c
        Libftprintf/source/ft_isalnum.c
        Libftprintf/source/ft_isalpha.c
        Libftprintf/source/ft_isdigit.c
        Libftprintf/source/ft_ltoa.c
        Libftprintf/source/ft_max.c
        Libftprintf/source/ft_pow.c
        Libftprintf/source/ft_printf.c
        Libftprintf/source/ft_printf.h
        Libftprintf/source/ft_rev_str.c
        Libftprintf/source/ft_strcat.c
        Libftprintf/source/ft_strchr.c
        Libftprintf/source/ft_strchr_free.c
        Libftprintf/source/ft_strcmp.c
        Libftprintf/source/ft_strdel.c
        Libftprintf/source/ft_strdup.c
        Libftprintf/source/ft_strjoin.c
        Libftprintf/source/ft_strjoin_free.c
        Libftprintf/source/ft_strlen.c
        Libftprintf/source/ft_strncmp.c
        Libftprintf/source/ft_strnew.c
        Libftprintf/source/ft_strpush.c
        Libftprintf/source/ft_strsub.c
        Libftprintf/source/ft_sym_del.c
        Libftprintf/source/ft_toupper.c
        Libftprintf/source/ft_utoa.c
        Libftprintf/source/get_bits.c
        Libftprintf/source/get_flags.c
        Libftprintf/source/get_fs.c
        Libftprintf/source/get_precision.c
        Libftprintf/source/get_size.c
        Libftprintf/source/get_type.c
        Libftprintf/source/get_width.c
        Libftprintf/source/handler.c
        Libftprintf/source/iterators.c
        Libftprintf/source/lf_handler.c
        Libftprintf/source/o_handler.c
        Libftprintf/source/overflow_handle.c
        Libftprintf/source/p_handler.c
        Libftprintf/source/parse.c
        Libftprintf/source/pos_pow.c
        Libftprintf/source/pr_handler.c
        Libftprintf/source/precision_handler.c
        Libftprintf/source/prepare.c
        Libftprintf/source/prepare_flags.c
        Libftprintf/source/prepare_precision.c
        Libftprintf/source/prepare_size.c
        Libftprintf/source/process_fs.c
        Libftprintf/source/queue_create.c
        Libftprintf/source/queue_destroy.c
        Libftprintf/source/queue_is_empty.c
        Libftprintf/source/queue_len.c
        Libftprintf/source/queue_pop.c
        Libftprintf/source/queue_push.c
        Libftprintf/source/round.c
        Libftprintf/source/s_handler.c
        Libftprintf/source/sign_ops.c
        Libftprintf/source/store.c
        Libftprintf/source/str_at.c
        Libftprintf/source/str_create_custstr.c
        Libftprintf/source/str_create_size.c
        Libftprintf/source/str_create_str.c
        Libftprintf/source/str_custjoin.c
        Libftprintf/source/str_cut.c
        Libftprintf/source/str_destroy.c
        Libftprintf/source/str_forward.c
        Libftprintf/source/str_len.c
        Libftprintf/source/str_print.c
        Libftprintf/source/str_push_cs.c
        Libftprintf/source/str_pushchar.c
        Libftprintf/source/str_pushstr.c
        Libftprintf/source/str_resize.c
        Libftprintf/source/str_rev.c
        Libftprintf/source/swap_comp_str.c
        Libftprintf/source/to_cstr.c
        Libftprintf/source/u_handler.c
        Libftprintf/source/width_handler.c
        Libftprintf/source/x_handler.c
        assign_pos.c
        calculate_count.c
        checker.c
        count_ops.c
        find_edge.c
        ft_del_node.c
        ft_lstadd_at_head.c
        ft_lstadd_at_tail.c
        ft_memcpy.c
        ft_newnode.c
        ft_strtoll.c
        get_count.c
        get_data_at.c
        get_flag.c
        get_neighb_by_pos.c
        get_node.c
        get_pos_by_sortpos.c
        get_rev.c
        get_rot.c
        init_list.c
        min_sort.c
        new_sort.c
        parse.c
        perform_flags.c
        push.c
#        push_swap.c
        push_swap.h
        reverse_rotate.c
        reverse_rotate_both.c
        rotate.c
        rotate_both.c
        set_count.c
        set_rev.c
        set_rot.c
        set_vals.c
        sort_pos.c
        stack_dup.c
        swap_both.c
        swap_st.c
        terminate.c
        validate.c)
